Added code for configuration, and code for product,Price and assortment.

--- a/PlugAndTrade/.gitignore
+++ b/PlugAndTrade/.gitignore
@@ -1,6 +1,9 @@
 ﻿# ignore All TestProductData files
-/TestProductData/Availabilities
-/TestProductData/Pricings	
-/TestProductData/Products
+/data/Availabilities
+/data/Pricings
+/data/Products
+
+/obj/Debug
+
 
 
