--- a/PlugAndTrade/PlugAndTrade.csproj
+++ b/PlugAndTrade/PlugAndTrade.csproj
@@ -12,4 +12,8 @@
     <Folder Include="writer\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
