--- a/PlugAndTrade/PlugAndTrade.csproj
+++ b/PlugAndTrade/PlugAndTrade.csproj
@@ -15,7 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="32.0.0" />
+    <PackageReference Include="Elastic.Apm" Version="1.27.0" />
+    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.13.12" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="NEST" Version="7.17.5" />
   </ItemGroup>
 
   <ItemGroup>
